--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS learn</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<title>JS learn</title>
 </head>
 
 <body>
-    <script src="app.js"></script>
+
+
+	<!-- scripts -->
+
+	<!-- <script src="customArrayMethods.js"></script> -->
+	<!-- <script src="customPromise.js"></script> -->
+	<!-- <script src="promise.js"></script> -->
 </body>
 
 </html>
