async await script added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 	<!-- scripts -->
 
+	<script src="asyncAwait.js"></script>
 	<!-- <script src="customArrayMethods.js"></script> -->
 	<!-- <script src="customPromise.js"></script> -->
 	<!-- <script src="promise.js"></script> -->
