--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 	<!-- scripts -->
 
-	<script src="asyncAwait.js"></script>
+	<!-- <script src="proxy.js"></script> -->
+	<script src="generators.js"></script>
+	<!-- <script src="asyncAwait.js"></script> -->
 	<!-- <script src="customArrayMethods.js"></script> -->
 	<!-- <script src="customPromise.js"></script> -->
 	<!-- <script src="promise.js"></script> -->
